html estructura one page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,139 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="Logo de la página">
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#blog">Blog</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <!--PRIMER SECCION-->
+    <section>
+        <div>
+            <h1>Amazing Holiday</h1>
+        </div>
+
+        <div>
+        <h3>Enrique Iglesias</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias distinctio ex quisquam,
+         hic praesentium totam quas dolor provident, dolore accusantium esse optio porro quasi 
+        eaque sint, harum excepturi iste expedita.
+        </p>
+        </div>
+
+        <div>
+            <img src="" alt="">
+        </div>
+
+    </section>
+
+    <!--SEGUNDA SECCION-->
+    <section>  
+       <div>
+        <img src="" alt="">
+        <i></i>
+       </div>
+
+       <div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis atque ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam dolores! Saepe, accusamus!</p>
+        <i></i>
+        <i></i> <!--Iconos-->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed adipisci vero modi,</p>
+        </div>
+    </section>
+
+    <!--TERCERA SECCION-->
+    <section>
+
+        <div>
+        <h1>Lorem ipsum dolor sit amet</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis atque ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam dolores! Saepe, accusamus!</p>
+        <p>READ MORE</p>
+        <i></i>    
+        </div>
+
+        <div><img src="" alt=""></div>
+
+        <div><img src="" alt=""></div>
+
+        <div>
+        <h3>Images Gallary</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis alias, ex, veritatis reprehenderit placeat</p>
+        <p>SEE ALL</p>
+        <i></i>
+        </div>
+
+    </section>
+
+     <!--CUARTA SECCION-->
+    <section>
+        <div>
+        <img src="" alt="">
+        </div>
+
+        <div>
+        <h2>Enrique Iglesias</h2>
+        <p>ux/ui designer</p>
+        <i></i>
+        <i></i>
+        <i></i>
+        </div>
+
+        <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum doloremque sequi natus minus nisi consequuntur vel dolore harum, qui illum. 
+        Iste neque, earum ipsa ullam perferendis temporibus nisi expedita assumenda.</p>
+        </div>
+    </section>
+
+    <!--CUARTA SECCION-->
+    <section>
+
+        <div>
+            <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae laudantium perferendis incidunt rem nihil. Ratione maxime hic dolor at reiciendis dolore velit dolorem architecto magni, eaque vitae veritatis doloribus officia!</p>
+            <i></i>
+            <i></i>
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <h1>Lorem ipsum dolor sit, amet consectetur!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis voluptatibus quia voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut consequuntur earum tenetur!</p>
+        </div>
+
+        <div>
+            <img src="" alt="">
+            <h1>Lorem ipsum dolor sit, amet consectetur</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis voluptatibus quia voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut consequuntur earum tenetur!</p>
+        </div>
+
+    </section>
+
+    <!--CUARTA SECCION-->
+    <footer>
+        <div>
+        <i></i>
+        </div>
+
+        <div>
+            <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+        </div>
+
+        <div>
+            <form>
+                <label for="email">Subscribe</label>
+                <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
+                <br>
+                <input type="submit" value="SEND">
+            </form>
+        </div>
+
+    </footer>
+
 </body>
 </html>
