--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="Logo de la página">
+        <img src="/img/logoParso.png" alt="Logo de la página" class="imagen-logo">
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -32,7 +32,7 @@
         </div>
 
         <div>
-            <img src="" alt="">
+            <img src="./img/img1.png" alt="">
         </div>
 
     </section>
@@ -40,7 +40,7 @@
     <!--SEGUNDA SECCION-->
     <section>  
        <div>
-        <img src="" alt="">
+        <img src="./img/img2.png" alt="">
         <i></i>
        </div>
 
@@ -63,9 +63,9 @@
         <i></i>    
         </div>
 
-        <div><img src="" alt=""></div>
+        <div><img src="./img/img3.png" alt=""></div>
 
-        <div><img src="" alt=""></div>
+        <div><img src="./img/img3.png" alt=""></div>
 
         <div>
         <h3>Images Gallary</h3>
