--- a/index.html
+++ b/index.html
@@ -1,145 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <img src="/img/logoParso.png" alt="Logo de la página" class="imagen-logo">
-    </header>
+<!--CABEZA/NAV-->
+<header>
+    <div class="logo">
+        <img src="./img/logoParso.png" alt="" class="">
+    </div>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
     </nav>
+</header>
 
-    <!--PRIMER SECCION-->
-    <section>
-        <div>
+
+<!--PRIMER SECCION-->
+<section>
+
+    <div class="titulo">
+
+        <div class="titulo2">
             <h1>Amazing Holiday</h1>
         </div>
 
-        <div>
-        <h3>Enrique Iglesias</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias distinctio ex quisquam,
-         hic praesentium totam quas dolor provident, dolore accusantium esse optio porro quasi 
-        eaque sint, harum excepturi iste expedita.
-        </p>
+        <div class="parrafo1">
+            <div class="tituloparrafo">
+                <h2>Enrique Iglesias</h2>
+            </div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestias distinctio ex quisquam,hic praesentium totam quas
+                dolor provident.
+            </p>
         </div>
 
-        <div>
-            <img src="./img/img1.png" alt="">
+    </div>
+
+    <div class="primerfoto">
+        <img src="./img/fotoone.jpg" alt="">
+    </div>
+
+</section>
+
+<!--SEGUNDA SECCION-->
+<section>
+
+    <div class="seccion2">
+        <div class="foto2">
+            <img src="./img/foto22.jpg" alt="">
         </div>
 
-    </section>
+        <div class="titulo3">
+            <h3>Lorem ipsum dolor sit amet,</h3>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis
+                    atque
+                    ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam
+                    dolores!
+                    Saepe, accusamus!</li>
+                <i></i>
+                <i></i> <!--Iconos-->
+                <div class="linea2">
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed adipisci vero modi,</li>
+                </div>
+            </ul>
+        </div>
 
-    <!--SEGUNDA SECCION-->
-    <section>  
-       <div>
-        <img src="./img/img2.png" alt="">
+
+    </div>
+</section>
+
+<!--TERCERA SECCION-->
+<section>
+
+    <div class="terceraseccion">
+
+        <div class="texto3">
+            <h4>Lorem ipsum dolor sit amet</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis atque
+                ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam dolores!
+                Saepe, accusamus!</p>
+            <div class="readmore">
+                <p>READ MORE</p>
+            </div>
+        </div>
         <i></i>
-       </div>
-
-       <div>
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis atque ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam dolores! Saepe, accusamus!</p>
-        <i></i>
-        <i></i> <!--Iconos-->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed adipisci vero modi,</p>
+        <div class="foto3">
+            <img src="./img/foto3.jpg" alt="">
         </div>
-    </section>
+    </div>
 
-    <!--TERCERA SECCION-->
-    <section>
-
-        <div>
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus accusamus impedit, aut blanditiis atque ratione repudiandae, esse odit dicta fuga sunt maiores aspernatur. Officiis beatae alias ullam dolores! Saepe, accusamus!</p>
-        <p>READ MORE</p>
-        <i></i>    
+    <!-- CUARTA SECCION-->
+    <div class="cuartaseccion">
+        <div class="foto4">
+            <img src="./img/cafeterua.jpg" alt="">
         </div>
-
-        <div><img src="./img/img3.png" alt=""></div>
-
-        <div><img src="./img/img3.png" alt=""></div>
-
-        <div>
-        <h3>Images Gallary</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis alias, ex, veritatis reprehenderit placeat</p>
-        <p>SEE ALL</p>
-        <i></i>
+        <div class="texto4">
+            <h5>Images Gallary</h5>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis alias, ex, veritatis reprehenderit
+                placeat
+            </p>
+            <div class="seeall">
+                <p>SEE ALL</p>
+            </div>
+            <i></i>
         </div>
+    </div>
 
-    </section>
+</section>
 
-     <!--CUARTA SECCION-->
-    <section>
-        <div>
-        <img src="" alt="">
-        </div>
+<!-- QUINTA SECCION-->
+<section>
+    <div class="box1">
 
-        <div>
-        <h2>Enrique Iglesias</h2>
-        <p>ux/ui designer</p>
-        <i></i>
-        <i></i>
-        <i></i>
+        <div class="fotoperfil">
+            <img src="./img/hombre.webp" alt="">
+            <div class="textocentro">
+                <h6>Enrique Iglesias</h6>
+                <p>UX/UI Designer</p>
+                <i></i>
+                <i></i>
+                <i></i>
+            </div>
         </div>
 
-        <div>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum doloremque sequi natus minus nisi consequuntur vel dolore harum, qui illum. 
-        Iste neque, earum ipsa ullam perferendis temporibus nisi expedita assumenda.</p>
+        <div class="textobox1">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum doloremque sequi natus minus nisi
+                consequuntur
+                vel dolore harum.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae laudantium perferendis
+                incidunt rem nihil.Ratione maxime hic dolor at reiciendis dolore.</p>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!--CUARTA SECCION-->
-    <section>
 
-        <div>
-            <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae laudantium perferendis incidunt rem nihil. Ratione maxime hic dolor at reiciendis dolore velit dolorem architecto magni, eaque vitae veritatis doloribus officia!</p>
+<!--SEXTA SECCION-->
+
+<section>
+    <div class="boxfinal">
+        <div class="textoizquierdo">
+            <h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h6>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae laudantium perferendis incidunt rem
+                nihil.</p>
             <i></i>
             <i></i>
         </div>
 
-        <div>
-            <img src="" alt="">
-            <h1>Lorem ipsum dolor sit, amet consectetur!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis voluptatibus quia voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut consequuntur earum tenetur!</p>
+
+        <div class="fotofinal">
+            <div class="textofinal1">
+                <img src="./img/fotofinal1.jpeg" alt="">
+                <h6>Lorem ipsum dolor sit, amet consectetur!</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis voluptatibus
+                    quia
+                    voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut consequuntur
+                    earum
+                    tenetur!</p>
+            </div>
+            <div class="fotofinal3">
+                <div class="textofinal2">
+                    <img src="./img/fotofinal2.jpg" alt="">
+                    <h6>Lorem ipsum dolor sit, amet consectetur</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis
+                        voluptatibus quia
+                        voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut
+                        consequuntur
+                        earum
+                        tenetur!</p>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div>
-            <img src="" alt="">
-            <h1>Lorem ipsum dolor sit, amet consectetur</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quidem assumenda corporis voluptatibus quia voluptas! Quos, nesciunt at. Illo possimus incidunt nisi dolores vel quaerat autem aut consequuntur earum tenetur!</p>
+</section>
+
+<footer>
+    <div class="footerlogo">
+        <img src="./img/logoParso.png" alt="">
+    </div>
+
+    <div  class="contenedordelbox">
+        <div class="footerbox3">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </div>
-
-    </section>
-
-    <!--CUARTA SECCION-->
-    <footer>
-        <div>
-        <i></i>
+        <div class="footerbox2">
+            <ul>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Careens</a></li>
+                <li><a href="">Terms Service</a></li>
+            </ul>
         </div>
-
-        <div>
-            <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
-        </div>
-
-        <div>
-            <form>
-                <label for="email">Subscribe</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
-                <br>
-                <input type="submit" value="SEND">
-            </form>
-        </div>
-
-    </footer>
+    </div>
+    
+</footer>
 
 </body>
+
 </html>
